// [START declaration]
syntax = "proto3";
package IngoingPB;

// [START messages]
enum SupportedAuthProvidersPB {
  FB = 0;
}

message AuthPB {
  string token                      = 1;
  SupportedAuthProvidersPB provider = 2;
}

message RegistrationPB {
  AuthPB authPB                  = 1;
  repeated int32 personalityTest = 2 [packed=true];
  double lat                     = 3;
  double lon                     = 4;
}

// [END messages]